@@ -1,3 +1,5 @@
+./htmlxref.cnf:14: Unrecognized type: foo
+./htmlxref.cnf:15: Missing type
 ./.texinfo/htmlxref.cnf:14: Unrecognized type: foo
 ./.texinfo/htmlxref.cnf:15: Missing type
 warning: Ignoring splitting for format info
